@@ -271,6 +271,9 @@ class CommandNewPost(Command):
             for compiler, extensions in self.site.config['COMPILERS'].items():
                 if extension in extensions:
                     content_format = compiler
+            if not content_format:
+                LOGGER.error("Unknown {0} extension {1}, maybe you need to install a plugin or enable an existing one?".format(content_type, extension))
+            return
 
         elif not content_format and import_file:
             # content_format not specified. If import_file was given, use
@@ -279,6 +282,9 @@ class CommandNewPost(Command):
             for compiler, extensions in self.site.config['COMPILERS'].items():
                 if extension in extensions:
                     content_format = compiler
+            if not content_format:
+                LOGGER.error("Unknown {0} extension {1}, maybe you need to install a plugin or enable an existing one?".format(content_type, extension))
+            return
 
         elif not content_format:  # Issue #400
             content_format = get_default_compiler(
